   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.

Dialplan Functions
------------------
 * Added a new dialplan function, CURLOPT, which permits setting various
   options that may be useful with the CURL dialplan function, such as
   cookies, proxies, connection timeouts, passwords, etc.

Miscellaneous
-------------
 * res_jabber: autoprune has been disabled by default, to avoid misconfiguration 
   that would end up being interpreted as a bug once Asterisk started removing 
   the contacts from a user list.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.0 to Asterisk 1.6.1  -------------
------------------------------------------------------------------------------

Device State Handling
---------------------
 * The event infrastructure in Asterisk got another big update to help support
    distributed events.  It currently supports distributed device state and
    distributed Voicemail MWI (Message Waiting Indication).  A new module has
    been merged, res_ais, which facilitates communicating events between servers.
    It uses the SAForum AIS (Service Availability Forum Application Interface
    Specification) CLM (Cluster Management) and EVT (Event) services to maintain
    a cluster of Asterisk servers, and to share events between them.  For more
    information on setting this up, see doc/distributed_devstate.txt.

Dialplan Functions
------------------
 * Added a new dialplan function, AST_CONFIG(), which allows you to access
   variables from an Asterisk configuration file.
 * The JACK_HOOK function now has a c() option to supply a custom client name.
 * Added two new dialplan functions from libspeex for audio gain control and 
   denoise, AGC() and DENOISE(). Both functions can be applied to the tx and 
   rx directions of a channel from the dialplan.
 * The SMDI_MSG_RETRIEVE function now has the ability to search for SMDI messages